# LuaDemo

./: build.gradle  gradle.properties  local.properties  settings.gradle
app/: build.gradle  wmlua.jks
app/src/main/: AndroidManifest.xml
app/src/main/assets/: main.lua
app/src/main/java/com/wm/luademo/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
sdk/: build.gradle
sdk/src/main/cpp/: CMakeLists.txt  wmLuaDemo.cpp  wmLuaDemo.h  wmTool.cpp  wmTool.h
sdk/src/main/cpp/lua/: luaconf.h
sdk/src/main/java/com/wm/lua/: luaNativeDemo.java
